# flagit

./: .coveragerc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  remove.yml
docs/: Makefile  conf.py  example.rst  index.rst
flagit/: df_v2.pkl  dummy_timeseries.pkl  flagit.py
src/flagit/: flagit.py  settings.py  skeleton.py
tests/: conftest.py  test_flagit.py  test_skeleton.py
tests/test_data/: df_v1.pkl  df_v3.pkl  test_dataframe.csv
